--- a/readme
+++ b/readme
@@ -1,1 +1,12 @@
-Começando
+git flow init
+
+git flow feature start criar_giropops
+git flow feature publish criar_giropops
+git flow feature finish criar_giropops
+git flow feature pull criar_giropops
+
+git flow release start 1.0
+git flow release finish 1.0
+
+git flow hotfix start my_hotfix
+git flow hotfix finish my_hotfix
