--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
+![alt Exemplo1](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow.PNG)
+
+![alt Exemplo2](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow2.PNG)
+
+
 git flow init
 
 git flow feature start criar_giropops
