--- a/readme
+++ b/readme
@@ -1,7 +1,5 @@
-![alt Exemplo1](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow.PNG)
-
-![alt Exemplo2](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow2.PNG)
-
+![img](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow.PNG)
+![img](https://github.com/nathan-oliveira/GitFlow/blob/main/GitFlow2.PNG)
 
 git flow init
 
